--- a/HTML/HTML Tables/WeirdTable.html
+++ b/HTML/HTML Tables/WeirdTable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<table border="1">
+		<table border="1" cellpadding="5">
 			<tr align="center">
 				<td colspan="3">
 					Title goes here
