Made links do nothing

--- a/HTML/Forms and Frames/TableWithMultiplePages.html
+++ b/HTML/Forms and Frames/TableWithMultiplePages.html
@@ -342,25 +342,25 @@
 							Previous
 						</button>
 
-						<a href="TableWithMultiplePages.html">
+						<a href="#">
 							1,
 						</a>
 
-						<a href="TableWithMultiplePages.html">
+						<a href="#">
 							2,
 						</a>
 
-						<a href="TableWithMultiplePages.html">
+						<a href="#">
 							3,
 						</a>
 
-						<a href="TableWithMultiplePages.html">
+						<a href="#">
 							4,
 						</a>
 
 						...,
 
-						<a href="TableWithMultiplePages.html">
+						<a href="#">
 							10
 						</a>
 						<button>
